<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/loginbg"
                android:orientation="vertical" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <ImageView
                    android:id="@+id/text"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/logo"
                    tools:ignore="InvalidId" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_toRightOf="@id/text"
                    android:gravity="center|left"
                    android:text="食说"
                    android:textColor="@color/light_red"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dip"
                android:orientation="vertical"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/account_icon" />

                    <EditText
                        android:id="@+id/edit_login_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_account"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/light_red"
                        android:textColorHint="@color/light_red"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/pwd_lock_icon" />

                    <EditText
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/light_red"
                        android:textColorHint="@color/hlight_red"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/light_gray"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dip"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/account_icon" />

                    <EditText
                        android:id="@+id/edit_register_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:drawablePadding="15dp"
                        android:hint="@string/input_account"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/light_red"
                        android:textColorHint="@color/hlight_red"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/follow" />


                    <EditText
                        android:id="@+id/edit_register_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawablePadding="15dp"
                        android:hint="@string/input_nickname"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/light_red"
                        android:textColorHint="@color/light_red"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/light_gray"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/pwd_lock_icon" />

                    <EditText
                        android:id="@+id/edit_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/light_red"
                        android:textColorHint="@color/hlight_red"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/light_gray"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_auto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/auto_login"
                    android:textColor="@color/light_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp">

                <Button
                    android:id="@+id/btm_login_register"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_rounded_corners"
                    android:text="登录"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/register_login_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dip"
                android:text="@string/register"
                android:textColor="@color/light_red"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="其他方式"
                android:textColor="@color/light_red"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="13dp"
                    android:src="@drawable/qq" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:src="@drawable/wechat" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:src="@drawable/weblog" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>